# jubelogs

./: .gitignore  README.md  compile_blogs.py  deploy.sh  home.js  index.html  markdown_converter.py  postlinks.js  pyproject.toml  script.js  splashes.js  styles.css  template.html
posts/: post_1.md  post_2.md  test_two.md
templates/: blog_contents.html  blog_link.html  category_link.html  category_list.html  home.html  latest_updates_list.html  layout.html
website/: index.html  index.js  layout.html  postlinks.js  styles.css  templating.js
website/blogs/: 1.html  2.html  3.html  test_one.html
