[tool.poetry]
name = "jubelogs"
version = "0.1.0"
description = ""
authors = ["Pedro Binotto <pedrosantibinotto@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
markdown = "^3.7"
beautifulsoup4 = "^4.12.3"
pymdown-extensions = "^10.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
